<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/dark_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:id="@+id/concertBackgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/concert1_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:background="#AA000000"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/concertTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/concertTitleCard"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/concertDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/concertDescriptionCard"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/concertLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/concertLocationCard"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/concertDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/concertDateCard"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/concertPerformers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/concertPerformersCard"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="60dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_button_background"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/editButton"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"/>

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="60dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_button_background"
                    android:backgroundTint="@color/red"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/deleteButton"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
